--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "express-serve-static-core": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-textarea-autosize": "^8.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
