--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -20,6 +20,8 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "off",
         "indent": [
             "error",
             4
