--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clipboard-copy": "^4.0.1",
     "express-serve-static-core": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
