--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
-    "practice"
+    "my-app"
   ],
   "author": "Prabesh Dai",
   "license": "ISC",
@@ -16,11 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.1.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.45.0"
+    "eslint": "^8.45.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
