--- a/frontend/src/icons/manifest.json
+++ b/frontend/src/icons/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Kliboard",
-  "short_name": "Klib",
+  "short_name": "Kliboard",
   "icons": [
     {
       "src": "https://kliboard.xyz/src/icons/clip.png",
@@ -10,6 +10,6 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "theme_color": "#000000",
+  "background_color": "#000000"
 }
