--- a/.github/workflows/vite_react_deployment.yml
+++ b/.github/workflows/vite_react_deployment.yml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -34,7 +33,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '14'  # Specify a valid Node.js version
           cache: 'npm'
           cache-dependency-path: 'frontend/package-lock.json'
 
@@ -46,15 +45,10 @@ jobs:
         run: npm run build
         working-directory: frontend
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload dist folder
-          path: 'frontend/dist'
-
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages  # Specify the branch to deploy to (usually 'gh-pages')
+          folder: frontend/dist  # Specify the folder to deploy (relative to the root)
+
