--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,7 +8,7 @@
       "sizes": "180x180"
     }
   ],
-  "start_url": "/",
+  "start_url": "/Kliboard/",
   "display": "standalone",
   "theme_color": "#1aac83",
   "background_color": "#414141"
